--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,27 +1,68 @@
 !!!
-%html
-
+%html{:lang => "en"}
   %head
-    %title
-      = yield(:title) || "Labz Oauth"
-    %meta{"http-equiv"=>"Content-Type", :content=>"text/html; charset=utf-8"}/
-    = stylesheet_link_tag "application"
-    = javascript_include_tag :application
-    = csrf_meta_tag
-    = yield(:head)
-
+    %meta{:charset => "utf-8"}/
+    %title Epitech - Labz
+    = csrf_meta_tags
+    / Le HTML5 shim, for IE6-8 support of HTML elements
+    /[if lt IE 9]
+      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script>
+    / Le styles
+    = stylesheet_link_tag    "application", :media => "all"
+    :css
+      body {
+        padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
+      }
+        / Le fav and touch icons
+    %link{:href => "images/favicon.ico", :rel => "shortcut icon"}/
+    %link{:href => "images/apple-touch-icon.png", :rel => "apple-touch-icon"}/
+    %link{:href => "images/apple-touch-icon-72x72.png", :rel => "apple-touch-icon", :sizes => "72x72"}/
+    %link{:href => "images/apple-touch-icon-114x114.png", :rel => "apple-touch-icon", :sizes => "114x114"}/
   %body
-    #user_session
-      - if current_user
-        %p= link_to "Sign out", :destroy_user_session, :method => :delete
-      - else
-        %p= link_to "Sign in", :new_user_session
+    .navbar.navbar-fixed-top
+      .navbar-inner
+        .container
+          %a.btn.btn-navbar{"data-target" => ".nav-collapse", "data-toggle" => "collapse"}
+            %span.i-bar
+            %span.i-bar
+            %span.i-bar
+          %a.brand{:href => "#"} Labz
+          .container.nav-collapse
+            %ul.nav
+              %li= link_to "Link1", "/path1"
+              %li= link_to "Link2", "/path2"
+              %li= link_to "Link3", "/path3"
+            %ul.nav.pull-right
+              - if current_user
+                %li.active= link_to current_user.login, edit_user_registration_path(current_user)
+                %li= link_to "Log out", :destroy_user_session, :method => :delete
+              - else
+                %li= link_to "Log in", :new_user_session
 
-    #container
-      - flash.each do |name, msg|
-        = content_tag :div, msg, :id => "flash_#{name}"
-
-      - if show_title?
-        %h1= yield(:title)
-
-      = yield
+          / /.nav-collapse
+    .container
+      .row
+        .span3
+          - flash.each do |name, msg|
+            = content_tag :div, msg, :id => "flash_#{name}", :class => ['alert', "alert-#{name}"]
+          -# .well.sidebar-nav
+          -#   %ul.nav.nav-list
+          -#     %li.nav-header Sidebar
+          -#     %li= link_to "Link1", "/path1"
+          -#     %li= link_to "Link2", "/path2"
+          -#     %li= link_to "Link3", "/path3"
+          .well
+            %h3= Faker::Lorem.words(2).join ' '
+            = Faker::Lorem.paragraph 14
+        / /span
+        .span9
+          = yield
+      / /row
+      %footer
+        %p &copy; Epitech 2012
+    / /container
+    /
+      Le javascript
+      \==================================================
+    / Placed at the end of the document so the pages load faster
+    = javascript_include_tag "application"
